# samples/server/petstore/rust-server/api/swagger.yaml
@@ -145,11 +145,11 @@ paths:
         type: "array"
         items:
           type: "string"
-          default: "available"
           enum:
           - "available"
           - "pending"
           - "sold"
+          default: "available"
         collectionFormat: "csv"
         formatString: "{:?}"
         example: "&Vec::new()"
@@ -424,6 +424,34 @@ paths:
       hasPathParams: true
       HttpMethod: "Post"
       hasFile: true
+  /store:
+    get:
+      tags:
+      - "store"
+      summary: "Returns store details"
+      description: "Returns a file"
+      operationId: "getStoreFile"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "file"
+          x-responseId: "SuccessfulOperation"
+          x-uppercaseResponseId: "SUCCESSFUL_OPERATION"
+          uppercase_operation_id: "GET_STORE_FILE"
+          uppercase_data_type: "BOX<STREAM<ITEM=VEC<U8>, ERROR=ERROR> + SEND>"
+          producesJson: true
+      security:
+      - api_key: []
+      operation_id: "get_store_file"
+      uppercase_operation_id: "GET_STORE_FILE"
+      path: "/store"
+      PATH_ID: "STORE"
+      hasPathParams: false
+      HttpMethod: "Get"
   /store/inventory:
     get:
       tags:
@@ -960,10 +988,10 @@ paths:
         type: "array"
         items:
           type: "string"
-          default: "$"
           enum:
           - ">"
           - "$"
+          default: "$"
         formatString: "{:?}"
         example: "Some(&Vec::new())"
       - name: "enum_form_string"
@@ -985,10 +1013,10 @@ paths:
         type: "array"
         items:
           type: "string"
-          default: "$"
           enum:
           - ">"
           - "$"
+          default: "$"
         formatString: "{:?}"
         example: "Some(&Vec::new())"
       - name: "enum_header_string"
@@ -1010,10 +1038,10 @@ paths:
         type: "array"
         items:
           type: "string"
-          default: "$"
           enum:
           - ">"
           - "$"
+          default: "$"
         formatString: "{:?}"
         example: "Some(&Vec::new())"
       - name: "enum_query_string"
